--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Intermathmods Africa</title>
 	<link rel="stylesheet" type="text/css" href="bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="styles.css">
-	<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+	<script src="jquery-3.3.1.min.js"></script>
 </head>
 <body>
 	<h1>African Intermaths and Mathmods 2018/2019 Set</h1>
