--- a/contactus.html
+++ b/contactus.html
@@ -32,7 +32,7 @@
 	    <input type="text" id="fname" name="first_name" placeholder="Your name..">
 
 	    <label for="email">Email Address</label>
-	    <input type="text" id="email" name="email_address" placeholder="Your email address..">
+	    <input type="email" id="email" name="email_address" placeholder="Your email address..">
 
 	    <label for="messagebody">Message body</label>
 	    <textarea id="messagebody" name="comments" placeholder="Write something.." style="height:200px"></textarea>
