created folders for css,js.fonts and images. Modified the look of index.html file.

--- a/contactus.html
+++ b/contactus.html
@@ -2,10 +2,9 @@
 <html>
 <head>
 	<title>Intermathmods Africa</title>
-	<link rel="stylesheet" type="text/css" href="bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="styles.css">
-	<link rel="stylesheet" type="text/css" href="forms.css">
-	<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/forms.css">
 </head>
 <body >
 	<h1>African Intermaths and Mathmods 2018/2019 Set</h1>
@@ -43,5 +42,6 @@
 	</div>
 	<div class="footer-copyright text-center py-3">© 2019 Copyright
     </div>
+    <script src="js/jquery-3.3.1.min.js"></script>
 </body>
 </html>
