--- a/knowus.html
+++ b/knowus.html
@@ -2,9 +2,8 @@
 <html>
 <head>
 	<title>Intermathmods Africa</title>
-	<link rel="stylesheet" type="text/css" href="bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="styles.css">
-	<script src="jquery-3.3.1.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
 	<h1>African Intermaths and Mathmods 2018/2019 Set</h1>
@@ -32,19 +31,19 @@
             			<h3>Nigeria</h3>
             			<p>We are six Nigerians in this batch of Intermaths/Mathmods program.The journey started back then in Nigeria when we got the exciting news of the opportunity to leave the shores of our nation for a while. We rally round to get the required documents and gather funds for the journey. On getting here we were faced with other difficuties but we are overcoming.
             			</p>
-            			<p><img id="image1" class="large-img" src="img_5.jpg" alt="City night"/> </p>
+            			<p><img id="image1" class="large-img" src="images/img_5.jpg" alt="City night"/> </p>
             		</li>
             		<li id="chapter1" class="list-group-item chapter-thumbnail">
             			<h3>Ghana</h3>
             			<p>We are Ghanians and five of us are in this batch of Intermaths/Mathmods program.The journey started back then in Nigeria when we got the exciting news of the opportunity to leave the shores of our nation for a while. We rally round to get the required documents and gather funds for the journey. On getting here we were faced with other difficuties but we are overcoming.
             			</p>
-            			<p><img id="image2" class="large-img" src="img_6.jpg" alt="City night"/> </p>
+            			<p><img id="image2" class="large-img" src="images/img_6.jpg" alt="City night"/> </p>
             		</li>
             		<li id="chapter2" class="list-group-item chapter-thumbnail">
             			<h3>Others</h3>
             			<p>Apart from Nigerians and Ghanians that has a greater proportion of Africans, we come from Ethopia, Egypt, Uganda and other african countries. We joined this batch of Intermaths/Mathmods program around September 2018.The journey started back then in Nigeria when we got the exciting news of the opportunity to leave the shores of our nation for a while. We rally round to get the required documents and gather funds for the journey. On getting here we were faced with other difficuties but we are overcoming.
             			</p>
-            			<p><img id="image3" class="large-img" src="img_4.jpg" alt="City night"/> </p>
+            			<p><img id="image3" class="large-img" src="images/img_4.jpg" alt="City night"/> </p>
             		</li>
             	</ul>
 			</div>
@@ -57,12 +56,7 @@
 	</div>
 	<div class="footer-copyright text-center py-3">© 2019 Copyright
     </div>
-	<script>
-		$(".chapter-thumbnail").click(function(){
-			$("#mainViewer").html(
-				$(this).html());
-		});
-		$("#chapter0").click();
-	</script>
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/knowus.js"></script>
 </body>
 </html>
