little changes in index.html

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 			<!--<div class="col-md-1">
 				<button id="backward">&lt;</button>
 			</div>-->
-			<div class="col-md-5">
+			<div class="col-sm-12 col-md-5 col-lg-5">
 				<img class="large-img" src="images/img_0.png" alt="graffittied building"/>
 			</div>
-			<div class="col-md-7">
+			<div class="col-sm-12 col-md-7 col-lg-7">
 				<img id="bigImage" class="large-img" src="images/img_1.jpg" alt="graffittied building"/> 
 			</div>
 			<!--<div class="col-md-1">
