--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				<button id="backward">&lt;</button>
 			</div>-->
 			<div class="col-md-5">
-				<img class="large-img" src="images/img_0.png" alt="graffittied building"/>
+				<img class="large1-img" src="images/img_0.png" alt="graffittied building"/>
 			</div>
 			<div class="col-md-7">
 				<img id="bigImage" class="large-img" src="images/img_1.jpg" alt="graffittied building"/> 
