--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<title>Intermathmods Africa</title>
+
 	<link rel="stylesheet" type="text/css" href="css/bootstrap_slate.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -70,10 +75,10 @@
 			<!--<div class="col-md-1">
 				<button id="backward">&lt;</button>
 			</div>-->
-			<div class="col-md-5">
+			<div class="col-xs-12 col-md-5">
 				<img class="large1-img" src="images/img_0.png" alt="graffittied building"/>
 			</div>
-			<div class="col-md-7">
+			<div class="col-xs-12 col-md-7">
 				<img id="bigImage" class="large-img" src="images/img_1.jpg" alt="graffittied building"/> 
 			</div>
 			<!--<div class="col-md-1">
@@ -83,7 +88,7 @@
 		&nbsp;
 		&nbsp;
 		<div class="row" id="description">
-			<div class="col-md-3">
+			<div class="col-xs-12 col-md-3">
 				<!--
 					This is a list view that will
 					contain all the chapter thumbnails
@@ -155,7 +160,7 @@ and involves other four leading institutions in Europe:
             		</li>
           		</ul>
           	</div>
-          	<div class="col-md-9">
+          	<div class="col-xs-12 col-md-9">
 				<div class="well" id="mainViewer" >
 				</div>
 			</div>
