--- a/knowus.html
+++ b/knowus.html
@@ -39,7 +39,7 @@
 	<div class="row" id="heada"><h1>African Intermaths and Mathmods 2018/2019 Set</h1></div>
 	<div class="container">
 		<div class="row" id="description">
-			<div class="col-md-3">
+			<div class="col-xs-12 col-md-3">
 				<ul class="list-group scrollable" id="chapterlist">
             		<li id="chapter0" class="list-group-item chapter-thumbnail">
             			<h3>Nigeria</h3>
@@ -61,7 +61,7 @@
             		</li>
             	</ul>
 			</div>
-			<div class="col-md-9">
+			<div class="col-xs-12 col-md-9">
 				<div class="well" id="mainViewer" >
 					hello africa
 				</div>
