little changes in knowus and contact

--- a/knowus.html
+++ b/knowus.html
@@ -15,7 +15,7 @@
         class="navbar-toggle collapsed" 
         data-toggle="collapse" 
         data-target="#main_navbar" 
-        aria-expanded="false">open!</button>
+        aria-expanded="false">expand</button>
       </div><!-- / collapsed navbar-->
 
       <!-- start un-collapsed navbar-->
