little changes in knowus and contact

--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
       <!-- start collapsed navbar-->
       <div class="navbar-header">
         <button 
-        type="button" 
-        class="navbar-toggle collapsed" 
-        data-toggle="collapse" 
-        data-target="#main_navbar" 
-        aria-expanded="false">open!</button>
+	        type="button" 
+	        class="navbar-toggle collapsed" 
+	        data-toggle="collapse" 
+	        data-target="#main_navbar" 
+	        aria-expanded="false">expand
+    	</button>
       </div><!-- / collapsed navbar-->
 
       <!-- start un-collapsed navbar-->
