little changes in knowus and contact

--- a/knowus.html
+++ b/knowus.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	
 	<title>Intermathmods Africa</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap_slate.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -14,14 +18,14 @@
         type="button" 
         class="navbar-toggle collapsed" 
         data-toggle="collapse" 
-        data-target="#main_navbar" 
+        data-target="#main_navbarus" 
         aria-expanded="false">expand</button>
       </div><!-- / collapsed navbar-->
 
       <!-- start un-collapsed navbar-->
       <div 
          class="collapse navbar-collapse" 
-         id="main_navbar">
+         id="main_navbarus">
         <ul class="nav navbar-nav">
           <li><a href="index.html">Home</a></li>
           <li class="active"><a href="knowus.html">Know us</a></li>
