--- a/contactus.html
+++ b/contactus.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+    
 	<title>Intermathmods Africa</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap_slate.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
