little changes in knowus and contact

--- a/contactus.html
+++ b/contactus.html
@@ -42,6 +42,8 @@
     </div> <!-- /container -->
   </nav>
 <body >
+  <div class="container">
+	<div class="row" id="heada"><h1>African Intermaths and Mathmods 2018/2019 Set</h1></div>
 	
 	<div class="container" id="forms">
     <div class="row" id="heada"><h1>African Intermaths and Mathmods 2018/2019 Set</h1></div>
@@ -60,6 +62,7 @@
 
 	  </form>
 	</div>
+</div>
 	<div class="footer-copyright text-center py-3">© 2019 Copyright
     </div>
     <script src="js/jquery-3.3.1.min.js"></script>
