--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 			<!--<div class="col-md-1">
 				<button id="backward">&lt;</button>
 			</div>-->
-			<div class="col-xs-12 col-md-5">
+			<div class="col-md-5">
 				<img class="large1-img" src="images/img_0.png" alt="graffittied building"/>
 			</div>
-			<div class="col-xs-12 col-md-7">
+			<div class="col-md-7">
 				<img id="bigImage" class="large-img" src="images/img_1.jpg" alt="graffittied building"/> 
 			</div>
 			<!--<div class="col-md-1">
@@ -89,7 +89,7 @@
 		&nbsp;
 		&nbsp;
 		<div class="row" id="description">
-			<div class="col-xs-12 col-md-3">
+			<div class="col-md-3">
 				<!--
 					This is a list view that will
 					contain all the chapter thumbnails
@@ -161,7 +161,7 @@ and involves other four leading institutions in Europe:
             		</li>
           		</ul>
           	</div>
-          	<div class="col-xs-12 col-md-9">
+          	<div class="col-md-9">
 				<div class="well" id="mainViewer" >
 				</div>
 			</div>
