little changes in knowus and contact

--- a/contactus.html
+++ b/contactus.html
@@ -44,7 +44,7 @@
 <body >
   <div class="container">
 	<div class="row" id="heada"><h1>African Intermaths and Mathmods 2018/2019 Set</h1></div>
-	
+	<div class="row">
 	<div class="container" id="forms">
 	  <form method="post" action="send_mail.php">
 
@@ -61,6 +61,7 @@
 
 	  </form>
 	</div>
+  </div>
 </div>
 	<div class="footer-copyright text-center py-3">© 2019 Copyright
     </div>
