little changes in knowus and contact

--- a/contactus.html
+++ b/contactus.html
@@ -43,8 +43,8 @@
   </nav>
 <body >
   <div class="container">
-	<div class="row" id="heada"><h1>African Intermaths and Mathmods 2018/2019 Set</h1></div>
-	<div class="row">
+	<div class="col-md-12" id="heada"><h1>African Intermaths and Mathmods 2018/2019 Set</h1></div>
+	<div class="col-md-12">
 	<div class="container" id="forms">
 	  <form method="post" action="send_mail.php">
 
