--- a/contactus.html
+++ b/contactus.html
@@ -42,9 +42,9 @@
     </div> <!-- /container -->
   </nav>
 <body >
-  <div class="container">
-	<div class="col-md-12" id="heada"><h1>African Intermaths and Mathmods 2018/2019 Set</h1></div>
-	<div class="col-md-12">
+  
+	<div id="heada"><h1>African Intermaths and Mathmods 2018/2019 Set</h1></div>
+	
 	<div class="container" id="forms">
 	  <form method="post" action="send_mail.php">
 
@@ -61,8 +61,8 @@
 
 	  </form>
 	</div>
-  </div>
-</div>
+ 
+
 	<div class="footer-copyright text-center py-3">© 2019 Copyright
     </div>
     <script src="js/jquery-3.3.1.min.js"></script>
