little changes in knowus and contact

--- a/contactus.html
+++ b/contactus.html
@@ -21,7 +21,7 @@
         class="navbar-toggle collapsed" 
         data-toggle="collapse" 
         data-target="#main_navbar" 
-        aria-expanded="false">open!</button>
+        aria-expanded="false">expand</button>
       </div><!-- / collapsed navbar-->
 
       <!-- start un-collapsed navbar-->
@@ -43,26 +43,23 @@
   </nav>
 <body >
   
+	<div id="heada"><h1>African Intermaths and Mathmods 2018/2019 Set</h1></div>
 	
-	
-	<div class="container" >
-    <div class="row" id="heada"><h1>African Intermaths and Mathmods 2018/2019 Set</h1></div>
-    <div class="row" id="forms">
-  	  <form method="post" action="send_mail.php">
+	<div class="container" id="forms">
+	  <form method="post" action="send_mail.php">
 
-  	    <label for="fname">Full Name</label>
-  	    <input type="text" id="fname" name="first_name" placeholder="Your name..">
+	    <label for="fname">Full Name</label>
+	    <input type="text" id="fname" name="first_name" placeholder="Your name..">
 
-  	    <label for="email">Email Address</label>
-  	    <input type="email" id="email" name="email_address" placeholder="Your email address..">
+	    <label for="email">Email Address</label>
+	    <input type="email" id="email" name="email_address" placeholder="Your email address..">
 
-  	    <label for="messagebody">Message body</label>
-  	    <textarea id="messagebody" name="comments" placeholder="Write something.." style="height:200px"></textarea>
+	    <label for="messagebody">Message body</label>
+	    <textarea id="messagebody" name="comments" placeholder="Write something.." style="height:200px"></textarea>
 
-  	    <button>Submit the form</button>
+	    <button>Submit the form</button>
 
-  	  </form>
-    </div>
+	  </form>
 	</div>
  
 
