--- a/knowus.html
+++ b/knowus.html
@@ -1,13 +1,26 @@
+</head>
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Intermathmods Africa</title>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap_slate.css">
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+  <title>Intermathmods Africa</title>
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/handlebars-v3.0.3.js"></script>
+  
+  <!-- 
+    These are our javascript files.
+    Intmod.js contains the data
+    itemList.js is the code
+  -->
+  <script src="js/Intmod.js"> </script>
+  <script src="js/itemList.js"> </script>
+
+  <link rel="stylesheet" type="text/css" href="css/bootstrap_slate.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
   <nav class="navbar navbar-default">
     <div class="container-fluid">
@@ -40,42 +53,32 @@
     </div> <!-- /container -->
   </nav>
 <body>
-	<div class="container">
-		<div class="row" id="heada"><h1>African Intermaths and Mathmods 2018/2019 Set</h1></div>
-		<div class="row" id="description">
-			<div class="col-md-3">
-				<ul class="list-group scrollable" id="chapterlist">
-            		<li id="chapter0" class="list-group-item chapter-thumbnail">
-            			<h3>Nigeria</h3>
-            			<p>We are six Nigerians in this batch of Intermaths/Mathmods program.The journey started back then in Nigeria when we got the exciting news of the opportunity to leave the shores of our nation for a while. We rally round to get the required documents and gather funds for the journey. On getting here we were faced with other difficuties but we are overcoming.
-            			</p>
-            			<p><img id="image1" class="large-img" src="images/img_5.jpg" alt="City night"/> </p>
-            		</li>
-            		<li id="chapter1" class="list-group-item chapter-thumbnail">
-            			<h3>Ghana</h3>
-            			<p>We are Ghanians and five of us are in this batch of Intermaths/Mathmods program.The journey started back then in Nigeria when we got the exciting news of the opportunity to leave the shores of our nation for a while. We rally round to get the required documents and gather funds for the journey. On getting here we were faced with other difficuties but we are overcoming.
-            			</p>
-            			<p><img id="image2" class="large-img" src="images/img_6.jpg" alt="City night"/> </p>
-            		</li>
-            		<li id="chapter2" class="list-group-item chapter-thumbnail">
-            			<h3>Others</h3>
-            			<p>Apart from Nigerians and Ghanians that has a greater proportion of Africans, we come from Ethopia, Egypt, Uganda and other african countries. We joined this batch of Intermaths/Mathmods program around September 2018.The journey started back then in Nigeria when we got the exciting news of the opportunity to leave the shores of our nation for a while. We rally round to get the required documents and gather funds for the journey. On getting here we were faced with other difficuties but we are overcoming.
-            			</p>
-            			<p><img id="image3" class="large-img" src="images/img_4.jpg" alt="City night"/> </p>
-            		</li>
-            	</ul>
-			</div>
-			<div class="col-md-9">
-				<div class="well" id="mainViewer" >
-					
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="footer-copyright text-center py-3">© 2019 Copyright
+  <div class="container">
+    <div class="row" id="heada"><h1>African Intermaths and Mathmods 2018/2019 Set</h1></div>
+    <div class="row" id="description">
+      <div class="col-md-3">
+        <ul class="list-group scrollable" id="chapterlist">
+
+        </ul>
+      </div>
+      <div class="col-md-9">
+        <div class="well" id="mainViewer" >
+          
+        </div>
+      </div>
     </div>
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/knowus.js"></script>
+  </div>
+  <div class="footer-copyright text-center py-3">© 2019 Copyright</div>
+  <script id="knowus-template" type="text/x-handlebars-template">
+    {{#each knowus}}
+      <li id="{{index}}" class="list-group-item chapter-thumbnail">
+        <h3>{{name}}</h3>
+        <p>{{description}}</p>
+        <p><img id="{{imageIndex}}" class="large-img" src="{{src}}" alt="{{imageTitle}}"/> </p>
+      </li>
+    {{/each}}
+  </script>
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
