minor correction on knowus page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         class="navbar-toggle collapsed" 
         data-toggle="collapse" 
         data-target="#main_navbar" 
-        aria-expanded="false">open!</button>
+        aria-expanded="false">expand</button>
       </div><!-- / collapsed navbar-->
 
       <!-- start un-collapsed navbar-->
@@ -85,7 +85,6 @@
 		<div class="row" id="description">
 			<div class="col-md-3">
 				<ul class="list-group scrollable" id="chapterlist">
-
 				</ul>	
           	</div>
           	<div class="col-md-9">
